# pyrefly

./: .gitignore  .gitmodules  .hgignore  AGENTS.md  Cargo.toml  README.md  REVIEW.md  TENSOR_SHAPES_CONTRIBUTING.md  action.yml
.cargo/: config.toml
.github/: gchat_ids.json  owners.json
.github/workflows/: assign_importer.yml  assign_owners_nightly.yml  assign_owners_sweep.yml  auto_assign.yml  backfill_importer_assignees.yml  build_binaries.yml  build_extension.yml  close_linked_prs.yml  codspeed.yml  deploy_extension.yml  issue_claim.yml  notify_discord_issues.yml  notify_discord_prs.yml  pyrefly.yml  test_extension.yml
crates/pyrefly_build/: Cargo.toml
crates/pyrefly_config/: Cargo.toml
crates/pyrefly_derive/: Cargo.toml
crates/pyrefly_glean_schema/: Cargo.toml
crates/pyrefly_lsp_test/: Cargo.toml
crates/pyrefly_python/: Cargo.toml
crates/pyrefly_types/: Cargo.toml
crates/pyrefly_util/: Cargo.toml
lsp/: package-lock.json  package.json
lsp/src/: codeLens.ts  extension-interop.ts  extension.ts  python-environment.ts
pyre2/: version.bzl
pyrefly/: Cargo.toml
pyrefly/benches/: README.md  micro.rs  pytorch.rs  pytorch_pin.bzl  type_check.rs  update_revision.sh
pyrefly/lib/: lib.rs  playground.rs  query.rs
pyrefly/test_laziness/: test_annotated_recursive_signatures_do_not_force_bodies.md  test_annotated_return_breaks_cascade.md  (+9 more)
schemas/: pyrefly.json  test-pyproject.toml  test-pyrefly.toml
scripts/: projects.py  pyrefly_primer_wrapper.sh
tensor-shapes/: run_all_shape_tests.py
test/: config.md  errors.md  notebooks.md  snippet.md
(+439 files in other folders)
