[patch.crates-io]
backtrace = { git = "https://github.com/rust-lang/backtrace-rs", rev = "df979dcf80027eb047d7bb9e0874710c15009f31" }
rustversion = { git = "https://github.com/fbsource/rustversion", rev = "3f072e049635b7463275fc4edebbbed3840d9297" }

[profile.release]
debug = 1
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev]
debug = 1

# Benchmarks don't need release's whole-program LTO with a single codegen unit.
# Disabling LTO and using multiple codegen units keeps the CodSpeed build within
# the memory budget of standard CI runners (and builds much faster) without
# affecting CodSpeed's deterministic instruction-count measurements.
[profile.bench]
inherits = "release"
lto = false
codegen-units = 16

[profile.dbg]
debug = true
inherits = "dev"

[workspace]
members = [
  "crates/pyrefly_build",
  "crates/pyrefly_bundled",
  "crates/pyrefly_config",
  "crates/pyrefly_derive",
  "crates/pyrefly_graph",
  "crates/pyrefly_python",
  "crates/pyrefly_types",
  "crates/pyrefly_util",
  "crates/tsp_types",
  "pyrefly",
  "pyrefly_wasm",
]
resolver = "2"

[workspace.package]
license = "MIT"
repository = "https://github.com/facebook/pyrefly"
